--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Peri-Peri Sizzler</title>
+    <link rel="stylesheet" href="styles.css" type="text/css"> <!--CSS stylesheet link-->
 </head>
 <body>
 
+<!--Top Navigation Bar-->
+<div class="navbar">
+    <a class="active" href="#home">Home</a>
+    <a href="#menu">Menu</a>
+    <a href="#about">About Us</a>
+    <a href="#contact">Contact</a>
+</div>
+
+<!--Hero Title-->
+<div class="hero">
+    <h1 class="hero-title">Welcome to Peri-Peri Sizzler</h1>
+    <a href></a>
+</div>
+
+<!--Javascript file link-->
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
