--- a/index.html
+++ b/index.html
@@ -9,16 +9,23 @@
 
 <!--Top Navigation Bar-->
 <div class="navbar">
-    <a class="active" href="#home">Home</a>
-    <a href="#menu">Menu</a>
-    <a href="#about">About Us</a>
-    <a href="#contact">Contact</a>
+    <div class="links">
+        <a class="active" href="#home">Home</a>
+        <a href="#menu">Menu</a>
+        <a href="#about">About Us</a>
+        <a href="#contact">Contact</a>
+        <a href="#order">Order</a>
+    </div>
 </div>
 
 <!--Hero Title-->
 <div class="hero">
-    <h1 class="hero-title">Welcome to Peri-Peri Sizzler</h1>
-    <a href></a>
+    <div class="container">
+        <div class="hero-content"><!--Where the main information is stored-->
+            <h1 class="hero-title">Welcome to Peri-Peri Sizzler</h1>
+            <a class="hero-btn" href="#Order"></a>
+        </div>
+    </div>
 </div>
 
 <!--Javascript file link-->
