Nav bar container
Added a container to the nav bar for css styling purposes

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
 <!--Top Navigation Bar-->
 <div class="navbar">
-    <div class="links">
-        <a class="active" href="#home">Home</a>
-        <a href="#menu">Menu</a>
-        <a href="#about">About Us</a>
-        <a href="#contact">Contact</a>
-        <a href="#order">Order</a>
+    <div class="container">
+        <div class="links">
+            <  
+            <a class="active" href="#home">Home</a>
+            <a href="#menu">Menu</a>
+            <a href="#about">About Us</a>
+            <a href="#contact">Contact</a>
+            <a href="#order">Order</a>
+        </div>
     </div>
 </div>
 
