--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <!--Top Navigation Bar-->
 <div class="navbar">
     <div class="container">
-        <div class="links">
-            <a class="active" href="#home">Home</a>
-            <a href="#menu">Menu</a>
-            <a href="#about">About Us</a>
-            <a href="#contact">Contact</a>
-            <a href="#order">Order</a>
-        </div>
+        <img class="logo" src="img/logo.png">
+        <ul class="navbar-menu">
+            <li class="active" href="#home">Home</li>
+            <li href="#menu">Menu</li>
+            <li href="#about">About Us</li>
+            <li href="#contact">Contact</li>
+            <li href="#order">Order</li>
+        </ul>
     </div>
 </div>
 
