--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 <body>
 
 <!--Top Navigation Bar-->
-<div class="navbar">
+<header class="navbar">
     <div class="container">
-        <img class="logo" src="img/logo.png">
+        <a href="#home"></a><img class="logo" width=200px src="img/logo.png"></a>
         <ul class="navbar-menu">
-            <li class="active" href="#home">Home</li>
-            <li href="#menu">Menu</li>
-            <li href="#about">About Us</li>
-            <li href="#contact">Contact</li>
-            <li href="#order">Order</li>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="#menu">Menu</a></li>
+             <li><a href="#about">About Us</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#order">Order</a></li>
         </ul>
     </div>
-</div>
+</header>
 
 <!--Hero Title-->
 <div class="hero">
     <div class="container">
         <div class="hero-content"><!--Where the main information is stored-->
             <h1 class="hero-title">Welcome to Peri-Peri Sizzler</h1>
-            <a class="hero-btn" href="#Order"></a>
+            <a class="hero-btn" href="#Order">Order</a>
         </div>
     </div>
 </div>
