--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
 
 <!--Hero Title-->
 <div class="hero">
-    <div class="container">
-        <div class="hero-content"><!--Where the main information is stored-->
-            <h1 class="hero-title">Welcome to Peri-Peri Sizzler</h1>
-            <a class="hero-btn" href="#Order">Order</a>
+    <div class="hero-image">
+        <div class="container">
+            <div class="hero-content"><!--Where the main information is stored-->
+                <h1 class="hero-title">Welcome to Peri-Peri Sizzler</h1>
+                <a class="hero-btn" href="#Order">Order</a>
+            </div>
         </div>
     </div>
+
 </div>
 
 <!--Javascript file link-->
