--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="hero-content"><!--Where the main information is stored-->
                 <h1 class="hero-title">Welcome to Peri-Peri Sizzler</h1>
-                <a class="hero-btn" href="#Order">Order</a>
+                <a class="hero-btn" href="#">Order</a>
             </div>
         </div>
     </div>
