--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <!--Top Navigation Bar-->
 <header class="navbar">
     <div class="container">
-        <img class="logo" width=250px src="img/logo.png"></a>
+        <a href="index.html"><img class="logo" width=250px src="img/logo.png"></a>
         <ul class="navbar-menu">
-            <li><a href="#order">ORDER</a></li>
             <li><a href="contact.html">CONTACT</a></li>
             <li><a href="about.html">ABOUT US</a></li>
             <li><a href="menu.html">MENU</a></li>
@@ -27,7 +26,6 @@
         <div class="container">
             <div class="hero-content"><!--Where the main information is stored-->
                 <h1 class="hero-title">Welcome to Peri-Peri Sizzler</h1>
-                <a class="hero-btn" href="#">Order</a>
             </div>
         </div>
     </div>
@@ -46,7 +44,7 @@
                 not stop here, as you can choose one of our freshly-made
                 sauces to have basted onto your chicken. At Peri-Peri Sizzler,
                 it's your choice.</p>
-            <a class="about-btn">Learn More!</a>
+            <a class="about-btn" href="about.html">Learn More!</a>
             <p class="about-disc">"To promote healthy living, we fry our
                 food only using cholesterol-free vegetable oil, and we only
                 sell Halal meat!"</p>
