--- a/menu.html
+++ b/menu.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Peri-Peri Menu</title>
-    <link rel="stylesheet" href="index-styles.css" type="text/css"> <!--CSS stylesheet link-->
+    <title>Peri-Peri Sizzler</title>
+    <link rel="stylesheet" href="menu-styles.css" type="text/css"> <!--CSS stylesheet link-->
 </head>
 <body>
 
 <!--Top Navigation Bar-->
 <header class="navbar">
     <div class="container">
-        <a href="#home"></a><img class="logo" width=250px src="img/logo.png"></a>
+        <a href="index.html"><img class="logo" width=250px src="img/logo.png"></a>
         <ul class="navbar-menu">
-            <li><a href="#order">ORDER</a></li>
             <li><a href="contact.html">CONTACT</a></li>
             <li><a href="about.html">ABOUT US</a></li>
             <li><a class="active" href="menu.html">MENU</a></li>
-            <li><a href="#home">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
         </ul>
     </div>
 </header>
+
+
+</body>
+</html>
