--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Peri-Peri Sizzler</title>
+    <link rel="stylesheet" href="contact-styles.css" type="text/css"> <!--CSS stylesheet link-->
 </head>
 <body>
+
+<!--Top Navigation Bar-->
+<header class="navbar">
+    <div class="container">
+        <a href="index.html"><img class="logo" width=250px src="img/logo.png"></a>
+        <ul class="navbar-menu">
+            <li><a class="active" href="contact.html">CONTACT</a></li>
+            <li><a href="about.html">ABOUT US</a></li>
+            <li><a href="menu.html">MENU</a></li>
+            <li><a href="index.html">HOME</a></li>
+        </ul>
+    </div>
+</header>
 
 </body>
 </html>
