--- a/about.html
+++ b/about.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Peri-Peri Sizzler</title>
-    <link rel="stylesheet" href="menu-styles.css" type="text/css"> <!--CSS stylesheet link-->
+    <title>About Peri-Peri Sizzler</title>
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <link rel="stylesheet" href="about-styles.css" type="text/css"> <!--CSS stylesheet link-->
 </head>
 <body>
 
@@ -19,6 +20,50 @@
         </ul>
     </div>
 </header>
+
+<!-Heading-->
+<div class="heading">
+    <h1>About Peri-Peri Sizzler</h1>
+    <p>At Peri-Peri Sizzler, all of our
+        chicken is marinated in our special recipe to ensure that
+        our unique flavour penetrates to the core. This is what makes
+        our chicken so special. This unique flavour experience does
+        not stop here, as you can choose one of our freshly-made
+        sauces to have basted onto your chicken. At Peri-Peri Sizzler,
+        it's your choice.</p>
+</div>
+<div class="container-main">
+    <section class="about">
+        <div class="about-img">
+            <img src="img/food1.jpg">
+        </div>
+        <div class="about-content">
+            <h2>Introduction to Bath: Peri-Peri Sizzler</h2>
+            <p>In the enchanting city of Bath, UK, lies Peri-Peri Sizzlers, a culinary
+                haven blending traditional peri-peri spices with global cuisine. Founded
+                with passion, the restaurant boasts an inviting ambiance adorned with
+                mosaic detailing.</p>
+        </div>
+    </section>
+</div>
+
+<div class="container-main section2">
+    <section class="about">
+        <div class="about-img">
+            <img src="img/food2.jpeg">
+        </div>
+        <div class="about-content">
+            <h2>Peri-Peri Sizzler's Food</h2>
+            <p>The restaurant's hallmark is its dedication to flavor. Every piece of
+                chicken is marinated using a special recipe, ensuring a unique taste
+                that penetrates to the core. But the magic doesn't stop there – patrons
+                can select from a range of house-made sauces to baste onto their chicken,
+                tailoring the taste to their preferences.</p>
+        </div>
+    </section>
+</div>
+
+
 
 </body>
 </html>
