--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Peri-Peri Sizzler</title>
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
     <link rel="stylesheet" href="index-styles.css" type="text/css"> <!--CSS stylesheet link-->
 </head>
 <body>
