--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Peri-Peri Sizzler</title>
+    <title>Peri-Peri Menu</title>
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
     <link rel="stylesheet" href="menu-styles.css" type="text/css"> <!--CSS stylesheet link-->
 </head>
 <body>
