--- a/about.html
+++ b/about.html
@@ -46,8 +46,7 @@
         </div>
     </section>
 </div>
-
-<div class="container-main section2">
+<div class="container-main">
     <section class="about">
         <div class="about-img">
             <img src="img/food2.jpeg">
@@ -62,6 +61,23 @@
         </div>
     </section>
 </div>
+
+<div class="container-main">
+    <section class="about">
+        <div class="about-img">
+            <img src="img/shop.jpg">
+        </div>
+        <div class="about-content">
+            <h2>Peri-Peri Sizzler's Flavours</h2>
+            <p>The menu offers a symphony of tastes, featuring peri-peri-marinated
+                chicken and imaginative vegetarian options inspired by diverse culinary
+                traditions. Notably, the "Peri-Peri Sizzler Platter" harmoniously combines
+                grilled meats, vegetables, grains, and the signature flavors that define the
+                restaurant.</p>
+        </div>
+    </section>
+</div>
+
 
 
 
