Introduction to Menu
Created menu introduction

--- a/index.html
+++ b/index.html
@@ -37,14 +37,10 @@
 <div class="about">
     <div class="container">
         <div class="about-contents">
-            <h2 class="about-title">About Peri-Peri Sizzler</h2>
+            <h2 class="about-title">Peri-Peri Sizzler's Menu</h2>
             <p class="about-para">At Peri-Peri Sizzler, all of our
                 chicken is marinated in our special recipe to ensure that
-                our unique flavour penetrates to the core. This is what makes
-                our chicken so special. This unique flavour experience does
-                not stop here, as you can choose one of our freshly-made
-                sauces to have basted onto your chicken. At Peri-Peri Sizzler,
-                it's your choice.</p>
+                our unique flavour penetrates to the core. </p>
             <a class="about-btn" href="about.html">Learn More!</a>
             <p class="about-disc">"To promote healthy living, we fry our
                 food only using cholesterol-free vegetable oil, and we only
