--- a/menu.html
+++ b/menu.html
@@ -21,6 +21,19 @@
     </div>
 </header>
 
+<!--Heading-->
+<div class="heading">
+    <h1>About Peri-Peri Sizzler</h1>
+    <p>At Peri-Peri Sizzler's promotes healthy living, and to do this,
+        we fry our food only using cholesterol-free vegetable oil, and
+        we only sell Halal meat!"</p>
+</div>
+
+<!--Menu List-->
+<div class="menu-list">
+
+</div>
+
 
 </body>
 </html>
