--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,6 @@
     <div class="container">
         <a href="index.html"><img class="logo" width=250px src="img/logo.png"></a>
         <ul class="navbar-menu">
-            <li><a href="contact.html">CONTACT</a></li>
             <li><a href="about.html">ABOUT US</a></li>
             <li><a class="active" href="menu.html">MENU</a></li>
             <li><a href="index.html">HOME</a></li>
@@ -28,10 +27,89 @@
         we fry our food only using cholesterol-free vegetable oil, and
         we only sell Halal meat!"</p>
 </div>
+<div class="heading-border"></div>
 
 <!--Menu List-->
 <div class="menu-list">
+    <section id="menu-list" class="section-padding">
+        <main>
+            <div class="menu-contents">
+                <h2>Burgers, Pittas & Wraps</h2>
+                <article class="product">
+                    <p class="item">Chicken Burger</p>
+                    <p class="price">£6.00</p>
+                </article>
+                <article class="product">
+                    <p class="item">Beef Burger</p>
+                    <p class="price">£6.00</p>
+                </article>
+                <article class="product">
+                    <p class="item">Fish Burger</p>
+                    <p class="price">£6.00</p>
+                </article>
+                <article class="product">
+                    <p class="item">Veggie Burger</p>
+                    <p class="price">£6.00</p>
+                </article>
 
+                <h2>Chicken</h2>
+                <article class="product">
+                    <p class="item">Chicken Wings</p>
+                    <p class="price">£4.00 - £9.50</p>
+                </article>
+                <article class="product">
+                    <p class="item">1/4, 1/2 and Whole Grilled Chicken</p>
+                    <p class="price">£4.50 - £13.50</p>
+                </article>
+                <article class="product">
+                    <p class="item">Chicken Strips</p>
+                    <p class="price">£4.25</p>
+                </article>
+                <article class="product">
+                    <p class="item">Chicken Nuggets</p>
+                    <p class="price">£8.00</p>
+                </article>
+
+                <h2>Misc</h2>
+                <article class="product">
+                    <p class="item">5 Ribs/Meal</p>
+                    <p class="price">£7.50/£9.00</p>
+                </article>
+                <article class="product">
+                    <p class="item">10 Ribs/Meal</p>
+                    <p class="price">£12.50/£14.00</p>
+                </article>
+                <article class="product">
+                    <p class="item">Sheesh Kebab Wrap/Pitta</p>
+                    <p class="price">£6.00</p>
+                </article>
+
+                <h2>Sides</h2>
+                <article class="product">
+                    <p class="item">Fries/Peri Fries/Wedges</p>
+                    <p class="price">£2.50</p>
+                </article>
+                <article class="product">
+                    <p class="item">Fiery Rice</p>
+                    <p class="price">£2.75</p>
+                </article>
+                <article class="product">
+                    <p class="item">Onion Rings</p>
+                    <p class="price">£2.50</p>
+                </article>
+
+                <h2>Drinks</h2>
+                <article class="product">
+                    <p class="item">All Cans (330ml)</p>
+                    <p class="price">£1.50</p>
+                </article>
+                <article class="product">
+                    <p class="item">All Bottles (1.5L)</p>
+                    <p class="price">£3.00</p>
+                </article>
+            </div>
+        </main>
+    </section>
 </div>
 
 
