--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Peri-Peri Sizzler</title>
+    <title>Peri-Peri Sizzler's Menu</title>
     <link rel="icon" type="image/x-icon" href="img/logo.png">
     <link rel="stylesheet" href="about-styles.css" type="text/css"> <!--CSS stylesheet link-->
 </head>
