--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </header>
 
 <!--Hero Title-->
-<div class="hero" id="home">
+<div class="hero" id="home"*>
     <div class="hero-image">
         <div class="container">
             <div class="hero-content"><!--Where the main information is stored-->
@@ -36,7 +36,7 @@
 <div class="about">
     <div class="container">
         <div class="about-contents">
-            <h2 class="about-title">Peri-Peri Sizzler's Menu</h2>
+            <h2 class="about-title">About Peri-Peri Sizzler</h2>
             <p class="about-para">At Peri-Peri Sizzler, all of our
                 chicken is marinated in our special recipe to ensure that
                 our unique flavour penetrates to the core. </p>
