--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
 
 <!--Heading-->
 <div class="heading">
-    <h1>About Peri-Peri Sizzler</h1>
+    <h1>Peri-Peri Sizzler's Menu</h1>
     <p>At Peri-Peri Sizzler's promotes healthy living, and to do this,
         we fry our food only using cholesterol-free vegetable oil, and
         we only sell Halal meat!"</p>
